--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,26 @@
 *{
   /* border: 1px solid black;   */
 }
+.red {
+  color: red
+}
+.yellow{
+
+  color: rgb(156, 156, 8)
+}
+.blue {
+  color: blue;
+}
+.Purple{
+  color: Purple;
+}
+.result{
+  background-image: url('research.png');
+  background-size: 100%;
+  width: 40px;
+  height: 40px;
+
+}
 body{
   background: #d8f3f8;
   background-size: auto;
@@ -26,7 +46,7 @@ h4{
 .hedder2 div{
   height: 30px;
   width: 30px;
-  margin: 0 120px;
+  margin: 0 128px;
   /* background-image: url("scroll.png"); */
 
   /* background-image: url('up-arrow.png'); */
@@ -56,6 +76,9 @@ margin: 5% 5% ;
   display: flex;
   justify-content: center;
   flex-direction:column; 
+  font-family: 'Dancing Script', cursive;
+font-size: 20px;
+font-weight: bold;
 
 
 }
@@ -90,7 +113,7 @@ p{
   }
   .qc_Part{
     border: 1px solid black; 
-height: 250px;
+/* height: 350px; */
 width: 800px;
 margin: 0  auto;
 display: flex;
@@ -120,9 +143,7 @@ margin: 0 auto;
 width: 30px ;
 height: 30px;
 margin:  10px auto ;
-position: relative;
-left: -500px;
-top: -186px;
+
 /* background-image: url("homepage.png"); */
 background-image: url("homepage.png");
 background-size: 100%
@@ -164,17 +185,32 @@ background-size: 100%
 .box1{
 background-color: rgb(14, 223, 7);
 border-radius: 25% 10%;
+font-family: 'Patrick Hand', cursive;
+
 
 }
 .box2{
   background-color: rgb(247, 165, 44);
   border-radius: 25% 10%;
-  
+  text-align: center;
+display: inline-block;
+font-family: 'Patrick Hand', cursive;
+
 }
   .box3{
     background-color: rgb(206, 63, 27);
     border-radius: 25% 10%;
+    font-family: 'Patrick Hand', cursive;
+
 }
+.box1,.box2,.box3 p{
+
+font-size: 18px;
+}
+.box1:hover,.box2:hover,.box3:hover { 
+  background-color: rgba(8, 44, 38, 0.616);
+ }
+
  header{
 
 display: flex;
@@ -197,7 +233,7 @@ margin:  0  80px;
   line-height: 50px;
 }  */
 .blink{
-  background-color: red;
+  background-color: rgb(56, 245, 9);
 
   /* font-size: 25px; */
   color: white;
@@ -207,4 +243,79 @@ margin:  0  80px;
 0%{opacity: 0;}
 50%{opacity: .5;}
 100%{opacity: 1;}
+}
+
+.yasser{
+font-size: 50px;
+  font-family: 'Kaushan Script', cursive;
+
+}
+.qc_Part h4{
+  font-family: 'Patrick Hand', cursive;
+
+font-size: 23px;
+}
+.qc_Part h2 {
+  font-family: 'Patrick Hand', cursive;
+
+  font-size: 30px;
+
+}
+.hedder1 h4 {
+  font-family: 'Kaushan Script', cursive;
+
+
+}
+.blink2{
+  background-color: rgb(245, 76, 9);
+
+  /* font-size: 25px; */
+  color: white;
+  animation: blink 1s linear infinite;
+}
+@keyframes blink{
+0%{opacity: 0;}
+50%{opacity: .5;}
+100%{opacity: 1;}
+}
+
+
+.header-container {
+  text-align: center;
+  color: rgb(255, 2, 2);
+  font-family: 'Patrick Hand', cursive;
+width: 600px;
+font-size:30px; 
+text-align: center;
+margin: 0 10%;
+ 
+}
+
+.scroll-hint {
+color: rgb(0, 0, 0);
+position: absolute;
+bottom: 30px;
+left: 50%;
+transform: translate(-50%, -50%);
+padding: 10px 40px;
+border: 3px solid #212121;
+font-size: 13px;
+font-family: 'Roboto Condensed', Helvetica, Helvetica Neue, Arial, sans-serif;
+  background-color: rgba(255,255,255,1);
+}
+.picInto{
+  height: 200px;
+  width: 300px;
+  position: relative;
+  left: 700px;
+  top:-50px;
+  background-image: url('creative.png');
+  background-size: 66%;
+  background-repeat: no-repeat;
+}
+.img3{
+  margin-left:35% ;
+  color: red;
+  font-family: 'Patrick Hand', cursive;
+
 }
