--- a/src/App.css
+++ b/src/App.css
@@ -183,11 +183,28 @@ background-size: 100%
 }
 
 .box1{
+
 background-color: rgb(14, 223, 7);
+/* background-color: rgb(0, 0, 0); */
+
 border-radius: 25% 10%;
 font-family: 'Patrick Hand', cursive;
 
 
+}
+.boxChoose{
+
+  background-color: rgb(0, 0, 0);
+  /* background-color: rgb(0, 0, 0); */
+  
+  border-radius: 25% 10%;
+  font-family: 'Patrick Hand', cursive;
+  
+  
+  }
+.warp{
+  display: flex;
+  flex-wrap: wrap;
 }
 .box2{
   background-color: rgb(247, 165, 44);
